// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown Button correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <injectIntl(SplitButton)
    onSelect={[Function]}
    primaryOptionLabel="Primary Option"
  >
    <SplitButton
      intl={
        Object {
          "$t": [Function],
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "defaultRichTextElements": undefined,
          "fallbackOnEmptyString": true,
          "formatDate": [Function],
          "formatDateTimeRange": [Function],
          "formatDateToParts": [Function],
          "formatDisplayName": [Function],
          "formatList": [Function],
          "formatListToParts": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatNumberToParts": [Function],
          "formatPlural": [Function],
          "formatRelativeTime": [Function],
          "formatTime": [Function],
          "formatTimeToParts": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getDisplayNames": [Function],
            "getListFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralRules": [Function],
            "getRelativeTimeFormat": [Function],
          },
          "locale": "en",
          "messages": null,
          "onError": [Function],
          "onWarn": [Function],
          "textComponent": Symbol(react.fragment),
          "timeZone": undefined,
          "wrapRichTextChunksInFragment": undefined,
        }
      }
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      onSelect={[Function]}
      primaryOptionLabel="Primary Option"
      variant="neutral"
    >
      <DropdownButtonBase
        buttonRef={[Function]}
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isOpen={false}
        items={
          <Item
            label="1st Option"
            onSelect={[Function]}
          />
        }
        openedViaKeyboard={false}
        refCallback={[Function]}
        requestClose={[Function]}
      >
        <div
          className="dropdown-button-base orion-fusion-theme"
        >
          <button
            aria-disabled={false}
            className="split-button-primary neutral orion-fusion-theme"
            disabled={false}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            type="button"
          >
            Primary Option
          </button>
          <button
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup="menu"
            aria-label="Terra.dropdownButton.moreOptions"
            className="split-button-caret neutral orion-fusion-theme"
            disabled={false}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            type="button"
          >
            <span
              className="caret-icon"
            />
          </button>
          <Dropdown
            buttonRef={[Function]}
            isOpen={false}
            openedViaKeyboard={false}
            refCallback={[Function]}
            requestClose={[Function]}
            targetRef={[Function]}
          >
            <Hookshot
              attachmentBehavior="flip"
              attachmentMargin={0}
              contentAttachment={
                Object {
                  "horizontal": "start",
                  "vertical": "top",
                }
              }
              contentOffset={
                Object {
                  "horizontal": 0,
                  "vertical": 0,
                }
              }
              isEnabled={true}
              isOpen={false}
              targetAttachment={
                Object {
                  "horizontal": "start",
                  "vertical": "bottom",
                }
              }
              targetOffset={
                Object {
                  "horizontal": 0,
                  "vertical": 0,
                }
              }
              targetRef={[Function]}
            />
          </Dropdown>
        </div>
      </DropdownButtonBase>
    </SplitButton>
  </injectIntl(SplitButton)>
</ThemeContextProvider>
`;

exports[`Dropdown Button should render a block split type 1`] = `
<DropdownButtonBase
  buttonRef={[Function]}
  isBlock={true}
  isCompact={false}
  isDisabled={false}
  isOpen={false}
  items={
    <Item
      label="1st Option"
      onSelect={[Function]}
    />
  }
  openedViaKeyboard={false}
  refCallback={[Function]}
  requestClose={[Function]}
>
  <button
    aria-disabled={false}
    className="split-button-primary neutral is-block"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    Primary Option
  </button>
  <button
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup="menu"
    aria-label="Terra.dropdownButton.moreOptions"
    className="split-button-caret neutral"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="caret-icon"
    />
  </button>
</DropdownButtonBase>
`;

exports[`Dropdown Button should render a compact split type 1`] = `
<DropdownButtonBase
  buttonRef={[Function]}
  isBlock={false}
  isCompact={true}
  isDisabled={false}
  isOpen={false}
  items={
    <Item
      label="1st Option"
      onSelect={[Function]}
    />
  }
  openedViaKeyboard={false}
  refCallback={[Function]}
  requestClose={[Function]}
>
  <button
    aria-disabled={false}
    className="split-button-primary neutral is-compact"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    Primary Option
  </button>
  <button
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup="menu"
    aria-label="Terra.dropdownButton.moreOptions"
    className="split-button-caret neutral is-compact"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="caret-icon"
    />
  </button>
</DropdownButtonBase>
`;

exports[`Dropdown Button should render a default split type 1`] = `
<DropdownButtonBase
  buttonRef={[Function]}
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isOpen={false}
  items={
    <Item
      label="1st Option"
      onSelect={[Function]}
    />
  }
  openedViaKeyboard={false}
  refCallback={[Function]}
  requestClose={[Function]}
>
  <button
    aria-disabled={false}
    className="split-button-primary neutral"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    Primary Option
  </button>
  <button
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup="menu"
    aria-label="Terra.dropdownButton.moreOptions"
    className="split-button-caret neutral"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="caret-icon"
    />
  </button>
</DropdownButtonBase>
`;

exports[`Dropdown Button should render a disabled split type 1`] = `
<DropdownButtonBase
  buttonRef={[Function]}
  disabled={true}
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isOpen={false}
  items={
    <Item
      label="1st Option"
      onSelect={[Function]}
    />
  }
  openedViaKeyboard={false}
  refCallback={[Function]}
  requestClose={[Function]}
>
  <button
    aria-disabled={false}
    className="split-button-primary neutral"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    Primary Option
  </button>
  <button
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup="menu"
    aria-label="Terra.dropdownButton.moreOptions"
    className="split-button-caret neutral"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="caret-icon"
    />
  </button>
</DropdownButtonBase>
`;

exports[`Dropdown Button should render a split type with custom attributes 1`] = `
<DropdownButtonBase
  buttonRef={[Function]}
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isOpen={false}
  items={
    <Item
      label="1st Option"
      onSelect={[Function]}
    />
  }
  openedViaKeyboard={false}
  other-custom-attribute="purple"
  refCallback={[Function]}
  requestClose={[Function]}
  test-custom-attribute={true}
>
  <button
    aria-disabled={false}
    className="split-button-primary neutral"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    Primary Option
  </button>
  <button
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup="menu"
    aria-label="Terra.dropdownButton.moreOptions"
    className="split-button-caret neutral"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="caret-icon"
    />
  </button>
</DropdownButtonBase>
`;

exports[`Dropdown Button should render a split type with multiple children 1`] = `
<DropdownButtonBase
  buttonRef={[Function]}
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isOpen={false}
  items={
    Array [
      <Item
        label="1st Option"
        onSelect={[Function]}
      />,
      <Item
        label="2nd Option"
        onSelect={[Function]}
      />,
      <Item
        label="3rd Option"
        onSelect={[Function]}
      />,
    ]
  }
  openedViaKeyboard={false}
  refCallback={[Function]}
  requestClose={[Function]}
>
  <button
    aria-disabled={false}
    className="split-button-primary neutral"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    Primary Option
  </button>
  <button
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup="menu"
    aria-label="Terra.dropdownButton.moreOptions"
    className="split-button-caret neutral"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="caret-icon"
    />
  </button>
</DropdownButtonBase>
`;

exports[`Dropdown Button should render an open split type 1`] = `
<DropdownButtonBase
  buttonRef={[Function]}
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isOpen={true}
  items={
    <Item
      label="1st Option"
      onSelect={[Function]}
    />
  }
  openedViaKeyboard={false}
  refCallback={[Function]}
  requestClose={[Function]}
>
  <button
    aria-disabled={false}
    className="split-button-primary neutral"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    Primary Option
  </button>
  <button
    aria-disabled={false}
    aria-expanded={true}
    aria-haspopup="menu"
    aria-label="Terra.dropdownButton.moreOptions"
    className="split-button-caret neutral is-active ignore-react-onclickoutside"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="caret-icon"
    />
  </button>
</DropdownButtonBase>
`;
